compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__reserved_word_imported_alias.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 225
expression: "import for.{class as while} as function\n\npub fn export() {\n  let delete = function.class\n  while()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- for.gleam
pub fn class() { 1 }

-- main.gleam
import for.{class as while} as function

pub fn export() {
  let delete = function.class
  while()
}


----- COMPILED JAVASCRIPT
import * as $function from "../for.mjs";
import { class$ as while$ } from "../for.mjs";

export function export$() {
  let delete$ = $function.class$;
  return while$();
}
