compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__reserved_word_in_function_arguments.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 283
expression: "pub fn main(arguments, eval) {\n  #(arguments, eval)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(arguments, eval) {
  #(arguments, eval)
}


----- COMPILED JAVASCRIPT
export function main(arguments$, eval$) {
  return [arguments$, eval$];
}
