compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__shadowing_current.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 156
expression: "pub fn main() {\n  let main = fn() { 0 }\n  main()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  let main = fn() { 0 }
  main()
}


----- COMPILED JAVASCRIPT
export function main() {
  let main$1 = () => { return 0; };
  return main$1();
}
