compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__star_slash_in_jsdoc.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 591
expression: "\n/// */\n///\npub fn main() { 1 }\n"
snapshot_kind: text
---
----- SOURCE CODE

/// */
///
pub fn main() { 1 }


----- COMPILED JAVASCRIPT
/**
 * *\/
 */
export function main() {
  return 1;
}
