compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__tail_call.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 104
expression: "\npub fn count(xs, n) {\n  case xs {\n    [] -> n\n    [_, ..xs] -> count(xs, n + 1)\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn count(xs, n) {
  case xs {
    [] -> n
    [_, ..xs] -> count(xs, n + 1)
  }
}


----- COMPILED JAVASCRIPT
import { Empty as $Empty } from "../gleam.mjs";

export function count(loop$xs, loop$n) {
  while (true) {
    let xs = loop$xs;
    let n = loop$n;
    if (xs instanceof $Empty) {
      return n;
    } else {
      let xs$1 = xs.tail;
      loop$xs = xs$1;
      loop$n = n + 1;
    }
  }
}
