compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__two_pipes_in_a_row.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 493
expression: "\npub type Function(a) {\n  Function(fn() -> a)\n}\n\npub fn main() {\n  [fn() { 1 } |> Function, fn() { 2 } |> Function]\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Function(a) {
  Function(fn() -> a)
}

pub fn main() {
  [fn() { 1 } |> Function, fn() { 2 } |> Function]
}


----- COMPILED JAVASCRIPT
import { toList, CustomType as $CustomType } from "../gleam.mjs";

export class Function extends $CustomType {
  constructor($0) {
    super();
    this[0] = $0;
  }
}
export const Function$Function = ($0) => new Function($0);
export const Function$isFunction = (value) => value instanceof Function;
export const Function$Function$0 = (value) => value[0];

export function main() {
  return toList([
    (() => {
      let _pipe = () => { return 1; };
      return new Function(_pipe);
    })(),
    (() => {
      let _pipe = () => { return 2; };
      return new Function(_pipe);
    })(),
  ]);
}
