compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__variable_rewriting_in_anon_fn_with_matching_parameter.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 325
expression: "pub fn bad() {\n  fn(state) {\n    let state = state\n    state\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn bad() {
  fn(state) {
    let state = state
    state
  }
}


----- COMPILED JAVASCRIPT
export function bad() {
  return (state) => {
    let state$1 = state;
    return state$1;
  };
}
