compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__variable_rewriting_in_anon_fn_with_matching_parameter_in_case.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 339
expression: "pub fn bad() {\n  fn(state) {\n    let state = case Nil {\n      _ -> state\n    }\n    state\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn bad() {
  fn(state) {
    let state = case Nil {
      _ -> state
    }
    state
  }
}


----- COMPILED JAVASCRIPT
export function bad() {
  return (state) => {
    let _block;
    let $ = undefined;
    _block = state;
    let state$1 = _block;
    return state$1;
  };
}
